# osgm15

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/osgm15/: __init__.py  _grid.py
tests/: test_grid.py
